# kisi-geyim-barkod

./: .gitignore  README.md  generate-icons.cjs  generate-icons.js  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: category.rs  color.rs  customer.rs  database.rs  mod.rs  payment.rs  product.rs  report.rs  returns.rs  sale.rs  settings.rs  size.rs  stock.rs  user.rs
src-tauri/src/db/: connection.rs  schema.rs
src-tauri/src/models/: category.rs  color.rs  customer.rs  mod.rs  product.rs  sale.rs  size.rs  stock.rs  user.rs
src/components/: LockScreen.tsx
src/components/barcode/: BarcodeLabel.tsx  BarcodePrintModal.tsx  index.ts
src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
src/components/receipt/: Receipt.tsx  ReceiptModal.tsx  index.ts
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Select.tsx  Table.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useBarkodOxucu.ts  useIdleDetection.ts  useProducts.ts  useSales.ts
src/lib/: tauri.ts  utils.ts
src/pages/: CategoryManagement.tsx  ColorManagement.tsx  Customers.tsx  Dashboard.tsx  DebtPayments.tsx  Login.tsx  ProductStatistics.tsx  Products.tsx  Reports.tsx  Returns.tsx  Sales.tsx  SalesList.tsx  Settings.tsx  SizeManagement.tsx  Stock.tsx  Users.tsx  index.ts
src/store/: appStore.ts
src/types/: index.ts
